# nemo

./: .gitignore  LICENSE
dbt/: dbt_project.yml
dbt/models/marts/: mart_activity_distribution.sql  mart_channel_activity.sql  mart_channel_engagement.sql  mart_channel_onboarding_scorecard.sql  mart_fast_reply_vs_retention.sql  mart_growth.sql  mart_message_depth_distribution.sql  mart_onboarding_funnel.sql  mart_onboarding_recurrence_funnel.sql  mart_participation.sql  schema.yml
dbt/models/staging/: dim_channel.sql  dim_member.sql  fct_channel_activity.sql  fct_first_reply.sql  fct_member_activity.sql  fct_message.sql  fct_message_activity.sql  schema.yml  sources.yml
infra/: .env.example  docker-compose.yml
infra/postgres/: init.sql
infra/superset/: Dockerfile
pipeline/: pyproject.toml  slack.manifest.yaml
pipeline/ingest/: analytics_pull.py  autojoin.py  dashboard_export_loader.py  events_listener.py  message_activity_pull.py
pipeline/jobs/: nightly_sync.py
pipeline/lib/: db.py  slack_client.py
pipeline/sql/: moderation.sql  raw.sql
pipeline/tests/: test_analytics_pull.py  test_events_listener.py  test_slack_client.py
schemas/raw_events/: channel_archive.json  channel_created.json  channel_rename.json  channel_unarchive.json  member_joined_channel.json  member_left_channel.json  message.json  reaction_added.json  team_join.json
web/: .gitignore  Gemfile  tokens.css
web/app/controllers/: channels_controller.rb  home_controller.rb  (+1 more)
web/config/: boot.rb  credentials.yml.enc  database.yml  importmap.rb  routes.rb
web/db/: seeds.rb
(+41 files in other folders)
