[project]
name = "mnemosyne-pipeline"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "slack-sdk>=3.33",
    "slack-bolt>=1.20",
    "jsonschema>=4.23",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
